=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3 branch
------------------------------------------------------------------------
2013-01-21  11:00:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl20
Fix possible problems in temporary file name

(Thanks to Romuald Carpentier)

The name of the temporary file used to dump the contents of the fdf file
could be malformed in certain situations. The algorithm has now been
changed.

modified:
  Src/reinit.F

------------------------------------------------------------------------
2012-10-26  14:45:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl19
Bug fixes for array bounds 

There were array bounds problems in:

- The new code to print the initial spin polarization, for the case
  of non-collinear spin.

- The 'transition_rate' routine: ek and ek_local were wrongly
  dimensioned to no_l, instead of no_u.

(+ removed old debugging code in 'domain_decomposition')

modified:
  Src/domain_decom.F
  Src/new_dm.F
  Src/transition_rate.F

------------------------------------------------------------------------
2012-10-24  14:45:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl18
Add rp and rv options to XML pseudopotential handling

The RPBE and revPBE XC flavors were not correctly handled by
the XML routines.

modified:
  Pseudo/atom/pseudoXML.f
  Util/pseudo-xml/xml2psf_helper.f

------------------------------------------------------------------------
2012-10-24  13:00:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl17
Enable MD continuation runs even if the restart file is not available

(Fabiano Corsetti)

If the user has selected MD.UseSaveXV to continue an MD run from a
previously computed set of positions and velocities (in the XV file),
but the appropriate restart file is not found, the positions x(t) and